fixed overflow account component settings

--- a/application/client/src/index.css
+++ b/application/client/src/index.css
@@ -278,4 +278,14 @@ code {
   width: 70%;
   height: 500px;
   border: 1px solid black;
+  grid-template-rows: minmax(150px, auto); 
 }
+
+.buyerAccountSettings-wrapper, .sellerAccountSettings-wrapper {
+  display: grid;
+  grid-template-columns: repeat(2, 5fr);
+  grid-auto-rows: minmax(100px, auto);
+  gap: 5px;
+  grid-auto-rows: 50px;
+}
+
